# rust-awslogs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  client.rs  core.rs  exceptions.rs  kinesis.rs  lib.rs  main.rs  time.rs  tui.rs
tests/: it.rs
